Wed Jul  4 12:39:39 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_typedef.h:
        * TAO_IDL/ast/ast_typedef.cpp:
        
          Added a public accessor for the 'owns_base_type' member. It turns
          out to be needed by the tao_ifr backend.
          
        * orbsvcs/IFR_Service/ifr_adding_visitor.h(element_type):
        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp(element_type):
        
          Added a parameter to the signature, used when called from a
          typedef, when the 'owns_base_type' member of the typedef
          must be checked, taking the place of 'anonymous' as used
          in calls from a sequence, attribute or valuebox.

Wed Jul  4 06:58:31 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/tests/Bug_1395_Regression/Bug_1395_Regression.mpc:
        * orbsvcs/tests/Bug_2137_Regression/Bug_2137_Regression.mpc:
        * orbsvcs/tests/Bug_2248_Regression/Bug_2248_Regression.mpc:
        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/GroupRef_Manipulation.mpc:
        * orbsvcs/tests/HTIOP/Hello/HTIOP_Hello.mpc:
        * orbsvcs/tests/Security/Big_Request/Big_Request.mpc:
        * orbsvcs/tests/Security/Bug_1107_Regression/Bug_1107_Regression.mpc:
        * orbsvcs/tests/Security/Bug_2908_Regression/Bug_2908_Regression.mpc:
        * orbsvcs/tests/Security/Secure_Invocation/Secure_Invocation.mpc:

          Remove exename from all projects that inherit from taoserver or taoclient.
          All projects that have taoserver or taoclient as base project do get an
          exename set as part of that project. Thanks to Johnny Willemsen for 
          pointing that out.

Wed Jul  4 05:35:49 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/tests/BiDir_CORBALOC/BiDirCORBALOC.mpc:
        * orbsvcs/tests/Bug_1395_Regression/Bug_1395_Regression.mpc:
        * orbsvcs/tests/Bug_2137_Regression/Bug_2137_Regression.mpc: